# IFJ

./: .gitignore  CMakeLists.txt  Makefile  README.md  error.h  expr.c  expr.h  expression.h  generator.c  generator.h  main.c  parser.c  parser.h  rozdeleni  scanner.c  scanner.h  stack.c  stack.h  str.c  str.h  symstack.c  symstack.h  symtable.c  symtable.h
Documentation/: Dokumentácia k projektu IFJ (1).docx  Dokumentácia k projektu IFJ.docx  Dokumentácia k projektu IFJ.docx  IFJ-diagram-1_1.drawio  IFJ-diagram-final.drawio  IFJ-diagram.drawio  LL_table.txt  LL_table.xlsx  LL_table_gen.xls  Precedencna tabulka.docx
Documentation/err_test/: RunTests  err1.txt  err1_1.txt  err1_2.txt  err2.txt  err2_2.txt  err2_3.txt  err2_4.txt  err3.txt  err3_1.txt  err3_2.txt  err4.txt  err4_1.txt  err9.txt  err9_1.txt
